--- a/GCoder/Base.lproj/Main.storyboard
+++ b/GCoder/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="15A284" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9059"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -691,11 +691,11 @@
                             <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m3M-EQ-WGd">
                                 <rect key="frame" x="484" y="20" width="403" height="445"/>
                                 <clipView key="contentView" id="Gkk-dI-TsD">
-                                    <rect key="frame" x="1" y="1" width="166" height="79"/>
+                                    <rect key="frame" x="1" y="1" width="401" height="443"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <view fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I61-yg-ZiF">
-                                            <rect key="frame" x="0.0" y="0.0" width="166" height="79"/>
+                                            <rect key="frame" x="0.0" y="364" width="166" height="79"/>
                                             <animations/>
                                         </view>
                                     </subviews>
@@ -730,12 +730,12 @@
                             </button>
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3N7-ID-fx8">
                                 <rect key="frame" x="20" y="20" width="456" height="486"/>
-                                <clipView key="contentView" misplaced="YES" id="uHI-Cm-jRx">
+                                <clipView key="contentView" id="uHI-Cm-jRx">
                                     <rect key="frame" x="1" y="0.0" width="454" height="485"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="183-22-Y1v" viewBased="YES" id="45w-zE-Dcf">
-                                            <rect key="frame" x="0.0" y="0.0" width="454" height="0.0"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="454" height="462"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <animations/>
                                             <size key="intercellSpacing" width="3" height="2"/>
